test/libsolidity/syntaxTests/nameAndTypeResolution/330_rational_as_exponent_value_unsigned.sol
contract test {
    function f() public {
        ufixed b = 3 ** 2.5;
    }
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
